--- a/templates/root.html
+++ b/templates/root.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
-</head>
-<body>
-    Hello {{ name }}
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Home Page{% endblock %}
+{% block content %}
+Hello {{ name }}
+{% endblock %}
