--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <body class="p-3">
     <header>
-        <h1>Gaidh-Litir</h1>
+        <h1>Gàidh-Litir</h1>
     </header>
 
     <div class="content">
